<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qustion1"
                android:textSize="16sp"

                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/txtiew1"


                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroub1"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"


                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messi"
                    android:id="@+id/radioButton1"
                    android:layout_marginStart="20dp"

                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salah"
                    android:layout_marginStart="30dp"
                    android:id="@+id/radioButton2"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modric"
                    android:id="@+id/radioButton3"
                    android:layout_marginStart="20dp"

                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"

                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:id="@+id/txtview2"
                android:textSize="14dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtview2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="14dp"
                android:text="@string/salah"
                android:id="@+id/checbox1"

                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtview2"
                app:layout_constraintStart_toEndOf="@id/checbox1"
                android:layout_marginTop="14dp"
                android:layout_marginStart="32dp"
                android:text="@string/messi"
                android:id="@+id/checbox2"

                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtview2"
                app:layout_constraintStart_toEndOf="@id/checbox2"
                android:layout_marginTop="14dp"
                android:layout_marginStart="30dp"
                android:text="@string/ranaldo"
                android:id="@+id/checbox3"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                app:layout_constraintTop_toBottomOf="@id/txtview2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:id="@+id/txtview3"

                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtview3"
                android:orientation="horizontal"
                android:id="@+id/radiogroub2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"

                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tamer_hosney"
                    android:layout_marginTop="14dp"
                    android:id="@+id/radioButton4"


                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/amer"
                    android:id="@+id/radioButton5"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/nansi"
                    android:layout_marginStart="15dp"
                    android:id="@+id/radioButton6"

                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                app:layout_constraintTop_toBottomOf="@id/radiogroub2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:id="@+id/txtview4"

                />

            />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext1"
                app:layout_constraintTop_toBottomOf="@id/txtview4"
                android:hint="@string/write_the_asnswer"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:maxLines="1"

                />

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorPrimaryDark"

                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:id="@+id/submit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
